// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using WasteManagement.API.Data;

#nullable disable

namespace WasteManagement.API.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20251201100900_AddUploadedFiles")]
    partial class AddUploadedFiles
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "8.0.5");

            modelBuilder.Entity("WasteManagement.API.Models.HandlingMethod", b =>
                {
                    b.Property<int>("HandlingId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<decimal>("CO2FactorPerTon")
                        .HasColumnType("TEXT");

                    b.Property<decimal>("CostPerTon")
                        .HasColumnType("TEXT");

                    b.Property<string>("Method")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("HandlingId");

                    b.ToTable("HandlingMethods");

                    b.HasData(
                        new
                        {
                            HandlingId = 1,
                            CO2FactorPerTon = 2500m,
                            CostPerTon = 150m,
                            Method = "Incineration"
                        },
                        new
                        {
                            HandlingId = 2,
                            CO2FactorPerTon = 500m,
                            CostPerTon = 80m,
                            Method = "Recycling"
                        });
                });

            modelBuilder.Entity("WasteManagement.API.Models.Site", b =>
                {
                    b.Property<int>("SiteId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Location")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("SiteId");

                    b.ToTable("Sites");

                    b.HasData(
                        new
                        {
                            SiteId = 1,
                            Location = "Denmark",
                            Name = "Convert"
                        },
                        new
                        {
                            SiteId = 2,
                            Location = "Norway",
                            Name = "Innvik"
                        });
                });

            modelBuilder.Entity("WasteManagement.API.Models.UploadedFile", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<byte[]>("Content")
                        .IsRequired()
                        .HasColumnType("BLOB");

                    b.Property<string>("FileName")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("WasteEntryId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("WasteEntryId");

                    b.ToTable("UploadedFiles");
                });

            modelBuilder.Entity("WasteManagement.API.Models.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Password")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Role")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Users");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Password = "admin123",
                            Role = "Admin",
                            Username = "admin"
                        },
                        new
                        {
                            Id = 2,
                            Password = "user123",
                            Role = "User",
                            Username = "user"
                        });
                });

            modelBuilder.Entity("WasteManagement.API.Models.WasteEntry", b =>
                {
                    b.Property<int>("EntryId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("Date")
                        .HasColumnType("TEXT");

                    b.Property<int>("HandlingId")
                        .HasColumnType("INTEGER");

                    b.Property<int?>("HandlingMethodHandlingId")
                        .HasColumnType("INTEGER");

                    b.Property<decimal>("QuantityKg")
                        .HasColumnType("TEXT");

                    b.Property<int>("SiteId")
                        .HasColumnType("INTEGER");

                    b.Property<int>("WasteTypeId")
                        .HasColumnType("INTEGER");

                    b.HasKey("EntryId");

                    b.HasIndex("HandlingMethodHandlingId");

                    b.HasIndex("SiteId");

                    b.HasIndex("WasteTypeId");

                    b.ToTable("WasteEntries");

                    b.HasData(
                        new
                        {
                            EntryId = 1,
                            Date = new DateTime(2025, 1, 10, 0, 0, 0, 0, DateTimeKind.Unspecified),
                            HandlingId = 1,
                            QuantityKg = 200m,
                            SiteId = 1,
                            WasteTypeId = 1
                        },
                        new
                        {
                            EntryId = 2,
                            Date = new DateTime(2025, 1, 15, 0, 0, 0, 0, DateTimeKind.Unspecified),
                            HandlingId = 2,
                            QuantityKg = 150m,
                            SiteId = 1,
                            WasteTypeId = 2
                        },
                        new
                        {
                            EntryId = 3,
                            Date = new DateTime(2025, 2, 1, 0, 0, 0, 0, DateTimeKind.Unspecified),
                            HandlingId = 1,
                            QuantityKg = 300m,
                            SiteId = 2,
                            WasteTypeId = 3
                        });
                });

            modelBuilder.Entity("WasteManagement.API.Models.WasteType", b =>
                {
                    b.Property<int>("WasteTypeId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Category")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("WasteTypeId");

                    b.ToTable("WasteTypes");

                    b.HasData(
                        new
                        {
                            WasteTypeId = 1,
                            Category = "Fiber",
                            Name = "Yarn leftovers"
                        },
                        new
                        {
                            WasteTypeId = 2,
                            Category = "Fabric",
                            Name = "Fabric scraps"
                        },
                        new
                        {
                            WasteTypeId = 3,
                            Category = "Cardboard/Plastic",
                            Name = "Packaging"
                        });
                });

            modelBuilder.Entity("WasteManagement.API.Models.UploadedFile", b =>
                {
                    b.HasOne("WasteManagement.API.Models.WasteEntry", "WasteEntry")
                        .WithMany()
                        .HasForeignKey("WasteEntryId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("WasteEntry");
                });

            modelBuilder.Entity("WasteManagement.API.Models.WasteEntry", b =>
                {
                    b.HasOne("WasteManagement.API.Models.HandlingMethod", "HandlingMethod")
                        .WithMany()
                        .HasForeignKey("HandlingMethodHandlingId");

                    b.HasOne("WasteManagement.API.Models.Site", "Site")
                        .WithMany()
                        .HasForeignKey("SiteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("WasteManagement.API.Models.WasteType", "WasteType")
                        .WithMany()
                        .HasForeignKey("WasteTypeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("HandlingMethod");

                    b.Navigation("Site");

                    b.Navigation("WasteType");
                });
#pragma warning restore 612, 618
        }
    }
}
